--- a/vaccine-book-app/src/components/card.module.css
+++ b/vaccine-book-app/src/components/card.module.css
@@ -1,7 +1,7 @@
 div.card {
-  width: 250px;
+  width: 280px;
   height: 280px;
-  background-color: blanchedalmond;
+  background-color: black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding-top: 10px;
@@ -16,5 +16,7 @@ div.carding {
 div.text {
   height: 25%;
   padding: 10px;
-  color: black;
+  color: white;
+  text-align: center;
+  font-weight: 600;
 }
