--- a/vaccine-book-app/src/components/card.module.css
+++ b/vaccine-book-app/src/components/card.module.css
@@ -1,7 +1,7 @@
 div.card {
   width: 280px;
   height: 280px;
-  background-color: black;
+  background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding-top: 10px;
@@ -18,5 +18,5 @@ div.text {
   padding: 10px;
   color: white;
   text-align: center;
-  font-weight: 600;
+  font-size: 600;
 }
