--- a/vaccine-book-app/src/app/globals.css
+++ b/vaccine-book-app/src/app/globals.css
@@ -90,7 +90,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  margin-top: 56px;
 }
 
 a {
@@ -100,6 +100,5 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: light;
   }
 }
